<resources>
    <string name="app_name">Tic Tac Toe</string>
    <string name="x">X</string>
    <string name="restart">restart</string>
    <string name="volume">\n</string>
    <string name="title_activity_bot_player">BotPlayer</string>
    <string name="neoncolor">neonColor</string>
    <string name="player_one">Player One</string>
    <string name="tic_tac_toe_game">Tic Tac Toe Game</string>
    <string name="start_game">Start Game</string>
    <string name="online">Online</string>
    <string name="logo">logo</string>
    <string name="offline">OFFLINE</string>
    <string name="title_activity_splash_screen">SplashScreenActivity</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="create_a_new_account">create a new account</string>
    <string name="don_t_have_account">Don\'t have account?</string>
    <string name="email_id">Email ID</string>
    <string name="sign_up">Sign up</string>
    <string name="already_have_account">Already have account?</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="create_account">Create Account</string>
    <string name="exit_btn">exit btn</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="try_again">Try again</string>
    <string name="no_internet">No internet</string>
    <string name="join_room">Join Room</string>
    <string name="create_room">Create Room</string>
    <string name="menu">menu</string>
    <string name="logout" />
    <string name="enter_room_code">Enter Room Code</string>
    <string name="create_room_again">Create Room Again</string>
    <string name="roomcode">roomcode</string>
    <string name="copyRoomCode" />
    <string name="timer">Timer</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="are_you_sure_you_want_to_proceed">Are you sure you want to proceed?</string>
    <string name="confirmation">Confirmation</string>
    <string name="loading">Loading...</string>
    <string name="waiting_for_join_second_player">Waiting for join second player</string>
    <string name="you_can_change_your_password_below">You can change your password below</string>
    <string name="below">below</string>
    <string name="omadreja_gmail_com">omadreja@gmail.com</string>
    <string name="enter_your_email_and_will_send_u_a_otp_to_confirm_this_account">Enter your email and will send u A OTP to confirm this account</string>
    <string name="new_password">New Password</string>
    <string name="change_password">Change Password</string>
    <string name="otp">OTP</string>
    <string name="verify_otp">Verify OTP</string>
    <string name="player_turn">Player Turn</string>
    <string name="your_turn">Your turn</string>
    <string name="turn">%s\'s turn</string>
    <string name="full_name">Full Name</string>
    <string name="o">o</string>
    <string name="username_gmail_com">username@gmail.com</string>
    <string name="reset_password">Reset Password</string>
    <string name="old_password">Old Password</string>
    <string name="blank" />

</resources>