<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg2"

    tools:context=".HomeActivity">

    <TextView
        android:id="@+id/logo"
        android:layout_width="311dp"
        android:layout_height="110dp"
        android:layout_marginTop="368dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"

        android:shadowColor="#FFFF00"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="13"

        android:text="@string/tic_tac_toe_game"
        android:textAlignment="center"

        android:textColor="#FFFFFF"
        android:textSize="43sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/online"
        android:layout_width="310dp"
        android:layout_height="57dp"
        android:layout_marginStart="27dp"
        android:layout_marginEnd="27dp"
        android:background="@drawable/round_back_blue1000"
        android:elevation="8dp"
        android:letterSpacing="0.2"
        android:shadowColor="@color/white"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="20"
        android:text="@string/online"

        android:textColor="@color/white"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"

        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toBottomOf="@+id/logo"
        app:layout_constraintVertical_bias="0.27" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/offline"
        android:layout_width="310dp"
        android:layout_height="57dp"
        android:layout_marginStart="27dp"
        android:layout_marginEnd="27dp"
        android:background="@drawable/round_back_dark_blue1000"
        android:elevation="8dp"

        android:letterSpacing="0.2"
        android:shadowColor="@color/white"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="20"
        android:text="@string/offline"
        android:textColor="@color/white"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintHorizontal_bias="0.489"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/online"
        app:layout_constraintVertical_bias="0.302" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="268dp"
        android:layout_height="260dp"
        android:layout_marginTop="64dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ttt_logo"
        android:contentDescription="@string/logo" />

    <ImageView
        android:id="@+id/exitBtn"
        android:layout_width="63dp"
        android:layout_height="48dp"
        android:layout_marginTop="4dp"
        android:contentDescription="@string/exit_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/baseline_exit_to_app_24" />

</androidx.constraintlayout.widget.ConstraintLayout>