<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
   android:background="@color/lightBlue"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ConnectionLostActivity">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="279dp"
        android:layout_height="289dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.305"
        app:srcCompat="@drawable/nointernet"
        android:contentDescription="@string/no_internet" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"

        android:text="@string/no_internet_connection"

        android:textColor="@color/dark_blue"
        android:textSize="33sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <Button
        android:id="@+id/tryAgain"
        android:layout_width="323dp"
        android:layout_height="55dp"
        android:textSize="22sp"
        android:textColor="@color/white"
        android:layout_marginTop="32dp"
        android:text="@string/try_again"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />
</androidx.constraintlayout.widget.ConstraintLayout>