<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateRoomDialog">

    <LinearLayout
        android:layout_width="399dp"

        android:layout_height="311dp"
        android:background="@color/ex_dark_blue"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.566">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/ex_dark_blue"
            android:gravity="end"
            android:orientation="horizontal"
            android:padding="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/create_room"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <ImageView
                android:id="@+id/closeBtn"
                android:layout_width="60dp"
                android:layout_height="35dp"
                android:layout_gravity="end"
                app:srcCompat="@drawable/baseline_close_24" />


        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/white"
            android:shadowColor="#0000FF"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="20" />

        <LinearLayout
            android:layout_width="match_parent"

            android:layout_height="wrap_content"
            android:background="@color/ex_dark_blue"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="30dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/roomCodeTxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/roomcode"

                    android:textColor="@color/white"
                    android:textSize="30sp" />

                <ImageView
                    android:id="@+id/copyRoomCode"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_marginStart="10dp"
                    android:contentDescription="@string/copyRoomCode"
                    app:srcCompat="@drawable/baseline_content_copy_24" />


            </LinearLayout>

            <TextView
                android:id="@+id/timerRoomCode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:letterSpacing="0.1"
                android:text="@string/timer"
                android:textColor="@color/white"
                android:textSize="29sp" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/waiting_for_join_second_player"
                android:textColor="@color/white"
                android:textSize="15sp" />


            <!--            <Button-->
            <!--                android:id="@+id/createRoomAgainBtn"-->
            <!--                android:textSize="18sp"-->
            <!--                android:layout_width="match_parent"-->
            <!--                android:layout_height="wrap_content"-->
            <!--                android:text="@string/create_room_again" />-->

        </LinearLayout>

        <ProgressBar
            android:id="@+id/progressBar3"

            style="?android:attr/progressBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>