<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg2"
    tools:context=".SignupActivity">

    <LinearLayout
        android:id="@+id/emaillayout"
        android:layout_width="wrap_content"
        android:layout_height="66dp"
        android:layout_marginBottom="12dp"
        android:background="@drawable/border_bg"
        android:elevation="8dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:shadowColor="@color/white"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="20"
        app:layout_constraintBottom_toTopOf="@+id/userlayout"
        app:layout_constraintEnd_toEndOf="@+id/userlayout"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/userlayout">

        <ImageView
            android:layout_width="60dp"
            android:layout_height="42dp"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="10dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/x"
            app:srcCompat="@drawable/baseline_email_24" />

        <EditText
            android:id="@+id/email"
            android:layout_width="200dp"
            android:layout_height="48dp"
            android:layout_marginEnd="20dp"
            android:background="@color/ex_dark_blue"

            android:ems="10"

            android:hint="@string/email_id"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:paddingStart="10dp"

            android:paddingEnd="10dp"
            android:shadowColor="#0000FF"
            android:shadowDx="0"
            android:shadowDy="0"

            android:shadowRadius="20"
            android:textColor="@color/white"
            android:textColorHint="@color/light_blue"
            android:textColorLink="@color/white"
            android:textSize="21sp" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/userlayout"
        android:layout_width="wrap_content"
        android:layout_height="66dp"
        android:layout_marginTop="304dp"
        android:background="@drawable/border_bg"
        android:elevation="8dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:shadowColor="@color/white"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="20"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="60dp"
            android:layout_height="42dp"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="10dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/x"
            app:srcCompat="@drawable/person" />

        <EditText
            android:id="@+id/username"
            android:layout_width="200dp"
            android:layout_height="48dp"
            android:layout_marginEnd="20dp"
            android:autofillHints=""
            android:background="@color/ex_dark_blue"
            android:ems="10"
            android:hint="@string/username"
            android:inputType="text"
            android:maxLines="1"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"

            android:shadowColor="#0000FF"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="20"


            android:textColor="@color/white"
            android:textColorHint="@color/light_blue"
            android:textColorLink="@color/white"
            android:textSize="21sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/logolayout"
        android:layout_width="wrap_content"
        android:layout_height="66dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/border_bg"
        android:elevation="8dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:shadowColor="@color/white"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="20"
        app:layout_constraintEnd_toEndOf="@+id/userlayout"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/userlayout"
        app:layout_constraintTop_toBottomOf="@+id/userlayout">

        <ImageView
            android:layout_width="60dp"
            android:layout_height="42dp"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="10dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/x"
            app:srcCompat="@drawable/password" />

        <EditText
            android:id="@+id/password"
            android:layout_width="200dp"
            android:layout_height="48dp"
            android:layout_marginEnd="20dp"
            android:background="@color/ex_dark_blue"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:maxLines="1"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:shadowColor="#0000FF"

            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="20"
            android:textColor="@color/white"


            android:textColorHint="@color/light_blue"
            android:textColorLink="@color/white"
            android:textSize="21sp"
            tools:ignore="TextFields" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/cplayout"
        android:layout_width="wrap_content"
        android:layout_height="66dp"
        android:layout_marginTop="88dp"
        android:background="@drawable/border_bg"
        android:elevation="8dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:shadowColor="@color/white"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="20"
        app:layout_constraintEnd_toEndOf="@+id/userlayout"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/userlayout"
        app:layout_constraintTop_toBottomOf="@+id/userlayout">

        <ImageView
            android:layout_width="60dp"
            android:layout_height="42dp"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="10dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/x"
            app:srcCompat="@drawable/password" />

        <EditText
            android:id="@+id/confirmPassword"
            android:layout_width="200dp"
            android:layout_height="48dp"
            android:layout_marginEnd="20dp"
            android:background="@color/ex_dark_blue"
            android:ems="10"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:maxLines="1"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:shadowColor="#0000FF"

            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="20"
            android:textColor="@color/white"


            android:textColorHint="@color/light_blue"
            android:textColorLink="@color/white"
            android:textSize="21sp"
            tools:ignore="TextFields"
            android:autofillHints="" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="112dp"
        android:text="@string/create_account"
        android:textColor="@color/white"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/signup_btn"
        android:layout_width="320dp"
        android:layout_height="57dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/round_back_blue1000"
        android:elevation="8dp"
        android:letterSpacing="0.2"
        android:shadowColor="@color/white"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="20"
        android:text="@string/sign_up"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/logolayout"

        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/logolayout"
        app:layout_constraintTop_toBottomOf="@+id/logolayout"
        app:layout_constraintVertical_bias="0.434" />

    <TextView
        android:id="@+id/alreadyAc"
        android:layout_width="185dp"
        android:layout_height="23dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="24dp"
        android:shadowColor="@color/white"

        android:shadowDx="0"
        android:shadowDy="0"
        android:text="@string/already_have_account"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="17sp"
        app:layout_constraintStart_toStartOf="@+id/signup_btn"
        app:layout_constraintTop_toBottomOf="@+id/signup_btn" />

    <TextView
        android:id="@+id/login"
        android:layout_width="49dp"
        android:layout_height="22dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="24dp"

        android:layout_marginEnd="44dp"
        android:shadowColor="@color/white"
        android:shadowDx="0"
        android:shadowDy="0"
        android:text="@string/login"
        android:textAlignment="center"
        android:textColor="@color/yellow"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="@+id/signup_btn"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/signup_btn" />

    <ProgressBar
        android:id="@+id/progressBar2"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/signup_btn" />

</androidx.constraintlayout.widget.ConstraintLayout>