<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg2"

    tools:context=".LoginActivity">

<!--    <FrameLayout-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="match_parent"-->
<!--        android:id="@+id/progressBarLayout"-->
<!--        android:foregroundGravity="center_vertical"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent">-->

<!--        <ProgressBar-->
<!--            android:id="@+id/progressBar"-->
<!--            style="@android:style/Widget.DeviceDefault.Light.ProgressBar.Large"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:background="#07135A"-->
<!--            android:layout_gravity="center"-->
<!--            android:indeterminate="true"-->
<!--            app:layout_constraintBottom_toBottomOf="parent"-->
<!--            app:layout_constraintEnd_toEndOf="parent"-->
<!--            app:layout_constraintStart_toStartOf="parent"-->
<!--            app:layout_constraintTop_toTopOf="parent" />-->
<!--    </FrameLayout>-->

    <LinearLayout
        android:id="@+id/userlayout"
        android:layout_width="wrap_content"
        android:layout_height="66dp"
        android:layout_marginTop="280dp"
        android:background="@drawable/border_bg"
        android:gravity="center"
        android:orientation="horizontal"
        android:shadowColor="@color/white"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="20"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="60dp"
            android:layout_height="42dp"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="10dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/x"
            app:srcCompat="@drawable/person" />

        <EditText
            android:id="@+id/txtusername"
            android:layout_width="200dp"
            android:layout_height="48dp"
            android:layout_marginEnd="20dp"
            android:autofillHints=""
            android:background="@color/ex_dark_blue"
            android:ems="10"
            android:hint="@string/username"
            android:inputType="text"
            android:maxLines="1"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"

            android:shadowColor="#0000FF"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="20"


            android:textColor="@color/white"
            android:textColorHint="@color/light_blue"
            android:textColorLink="@color/white"
            android:textSize="21sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/logolayout"
        android:layout_width="wrap_content"
        android:layout_height="66dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/border_bg"
        android:gravity="center"
        android:orientation="horizontal"
        android:shadowColor="@color/white"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="20"
        app:layout_constraintEnd_toEndOf="@+id/userlayout"
        app:layout_constraintStart_toStartOf="@+id/userlayout"
        app:layout_constraintTop_toBottomOf="@+id/userlayout">

        <ImageView
            android:layout_width="60dp"
            android:layout_height="42dp"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="10dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/x"
            app:srcCompat="@drawable/password" />

        <EditText
            android:id="@+id/txtpassword"
            android:layout_width="200dp"
            android:layout_height="48dp"
            android:layout_marginEnd="20dp"
            android:background="@color/ex_dark_blue"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:maxLines="1"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:shadowColor="#0000FF"

            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="20"
            android:textColor="@color/white"


            android:textColorHint="@color/light_blue"
            android:textColorLink="@color/white"
            android:textSize="21sp"
            tools:ignore="TextFields"
            android:autofillHints="" />
    </LinearLayout>


    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="172dp"
        android:text="@string/welcome_back"
        android:textColor="@color/white"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/login_btn"
        android:layout_width="320dp"
        android:layout_height="57dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/round_back_blue1000"
        android:elevation="8dp"
        android:letterSpacing="0.2"
        android:shadowColor="@color/white"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="20"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/logolayout"

        app:layout_constraintHorizontal_bias="0.25"
        app:layout_constraintStart_toStartOf="@+id/logolayout"
        app:layout_constraintTop_toBottomOf="@+id/logolayout"
        app:layout_constraintVertical_bias="0.276" />

    <TextView
        android:id="@+id/haveaccount"
        android:layout_width="159dp"
        android:layout_height="18dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="24dp"
        android:shadowColor="@color/white"

        android:shadowDx="0"
        android:shadowDy="0"
        android:text="@string/don_t_have_account"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="17sp"
        app:layout_constraintStart_toStartOf="@+id/login_btn"
        app:layout_constraintTop_toBottomOf="@+id/login_btn" />

    <TextView
        android:id="@+id/signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="24dp"

        android:shadowColor="@color/white"
        android:shadowDx="0"
        android:shadowDy="0"
        android:text="@string/create_a_new_account"
        android:textAlignment="center"
        android:textColor="@color/yellow"
        android:textSize="17sp"


        app:layout_constraintEnd_toEndOf="@+id/login_btn"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/haveaccount"
        app:layout_constraintTop_toBottomOf="@+id/login_btn" />

    <ImageView
        android:id="@+id/backBtn"
        android:layout_width="64dp"
        android:layout_height="52dp"
        android:layout_marginTop="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/baseline_keyboard_backspace_24" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="76dp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logolayout" />


</androidx.constraintlayout.widget.ConstraintLayout>
